--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "build:webpack:dev": "webpack --config webpack.dev.config.cjs",
     "build:all": "npm run build && npm run build:webpack",
     "dev": "ts-node --esm src/index.ts",
-    "test": "jest",
+    "test": "jest --collectCoverage",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint src/**/*.ts --fix",
     "lint:fix": "eslint src/**/*.ts --fix",
     "clean": "rm -rf dist",
     "prebuild": "npm run clean",
