--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -6,6 +6,7 @@
     "moduleResolution": "node",
     "declaration": false,
     "declarationMap": false,
+    "declarationDir": null,
     "outDir": "./dist/webpack",
     "sourceMap": true
   },
