--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
       "types": "./types/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.js"
+    },
+    "./modifiers": {
+      "types": "./types/modifiers/index.d.ts",
+      "import": "./dist/modifiers/index.js",
+      "require": "./dist/modifiers/index.js"
+    },
+    "./modifiers/english": {
+      "types": "./types/modifiers/english/index.d.ts",
+      "import": "./dist/modifiers/english/index.js",
+      "require": "./dist/modifiers/english/index.js"
     }
   },
   "scripts": {
@@ -45,15 +55,15 @@
   "devDependencies": {
     "@eslint/js": "^9.37.0",
     "@types/jest": "^30.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.45.0",
-    "@typescript-eslint/parser": "^8.45.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
     "eslint": "^9.37.0",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
     "ts-loader": "^9.5.4",
     "typescript": "^5.9.3",
-    "webpack": "^5.102.0",
+    "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1"
   }
 }
