--- a/package.json
+++ b/package.json
@@ -41,7 +41,16 @@
     "type": "git",
     "url": "git+https://github.com/videlais/story-grammar.git"
   },
-  "keywords": ["grammar", "story", "narrative", "generator", "procedural", "content generation", "typescript", "javascript"],
+  "keywords": [
+    "grammar",
+    "story",
+    "narrative",
+    "generator",
+    "procedural",
+    "content generation",
+    "typescript",
+    "javascript"
+  ],
   "author": "Dan Cox",
   "license": "MIT",
   "type": "module",
@@ -53,15 +62,15 @@
     "esm": true
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.0",
+    "@eslint/js": "^9.39.1",
     "@types/jest": "^30.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.46.2",
-    "@typescript-eslint/parser": "^8.46.2",
-    "eslint": "^9.39.0",
-    "jest": "^30.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
+    "eslint": "^9.39.1",
+    "jest": "^29.7.0",
     "ts-jest": "^29.4.5",
-    "ts-node": "^10.9.2",
     "ts-loader": "^9.5.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1"
